# CentaurTechnicalIndicators-Python

./: AGENTS.md  AI_FRIENDLY_ROADMAP.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ai-policy.yaml  pyproject.toml  test_requirements.txt
.github/: pull_request_template.md
.github/workflows/: CI.yml
docs/: 2.0.0.md  AI_ONBOARDING.md  README.md  REPO_MAP.md
docs/implementation_decisions/: B1_BRIEF.md  B2_BRIEF.md  B3_BRIEF.md  FINAL_BRIEF.md  IMPLEMENTATION_PLAN.md  PLAN-1.3.1.md  RESUME.md  SLICE-00-fmt-baseline.md  SLICE-01-dep-bump.md  SLICE-02-favorable-move.md  SLICE-03-inherited-fix-tests.md  SLICE-04-readme-accuracy.md  SLICE-05-string-aliases.md  SLICE-06-pyproject-metadata.md  SLICE-07-mixed-layout-stubs.md  SLICE-08-ci-fmt-gate.md  SLICE-09-2.0-backlog.md  SLICE-10-release-cut.md  SLICE-11-decision-docs.md
docs/technical_decisions/: DECISIONS-1.3.0.md
python/centaur_technical_indicators/: __init__.py  __init__.pyi  candle_indicators.pyi  chart_trends.pyi  correlation_indicators.pyi  momentum_indicators.pyi  moving_average.pyi  other_indicators.pyi  strength_indicators.pyi  trend_indicators.pyi  volatility_indicators.pyi
src/: candle_indicators.rs  chart_trends.rs  correlation_indicators.rs  lib.rs  momentum_indicators.rs  moving_average.rs  other_indicators.rs  standard_indicators.rs  strength_indicators.rs  trend_indicators.rs  volatility_indicators.rs
tests/: test_candle_indicators.py  test_chart_trends.py  test_correlation_indicators.py  test_momentum_indicators.py  test_moving_average.py  test_other_indicators.py  test_package_layout.py  test_standard_indicators.py  test_strength_indicators.py  test_string_aliases.py  test_trend_indicators.py  test_volatility_indicators.py
