[package]
name = "centaur_technical_indicators"
version = "1.3.0"
edition = "2021"
rust-version = "1.83"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "centaur_technical_indicators"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.29"
centaur_technical_indicators = "1.3.0"
