[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "centaur_technical_indicators"
requires-python = ">=3.10"
description = "A collection of 50+ fully configurable technical indicators for financial analysis, powered by Rust and Python. Part of the CRT (Centaur Research & Technologies) ecosystem."
readme = "README.md"
authors = [
    { name="ChironMind", email="your@email.com" }
]
maintainers = [
    { name="ChironMind", email="your@email.com" }
]
license = { file="LICENSE-MIT" }
keywords = ["finance", "technical indicators", "analysis", "trading", "python", "rust", "quantitative"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/chironmind/CentaurTechnicalIndicators-Python"
"Documentation" = "https://centaurtechnicalindicators-python.readthedocs.io/en/latest/"
"Source" = "https://github.com/chironmind/CentaurTechnicalIndicators-Python"
"Issues" = "https://github.com/chironmind/CentaurTechnicalIndicators-Python/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
exclude = [{ path = "docs/**/*", format = "sdist" }]
